Add new test script for PR job builder